# nano-syntax-highlighting-iNano-

./: Makefile  README.md  apache2.nanorc  aptsrclist.nanorc  awk.nanorc  bash.nanorc  c.nanorc  changelog.nanorc  changelogs.nanorc  cmake.nanorc  coffeescript.nanorc  csharp.nanorc  css.nanorc  cython.nanorc  default.nanorc  dot.nanorc  git.nanorc  glsl.nanorc  go.nanorc  html.nanorc  ini.nanorc  inputrc.nanorc  java.nanorc  javascript.nanorc  json.nanorc  keymap.nanorc  kickstart.nanorc  ledger.nanorc  lisp.nanorc  lua.nanorc  makefile.nanorc  man.nanorc  markdown.nanorc  mixins.sed  mpdconf.nanorc  nanorc.nanorc  nginx.nanorc  peg.nanorc  php.nanorc  pkg-config.nanorc  (+22 more)
examples/: C.c  CMakeLists.txt  CSS.css  CSharp.cs  ColorTest  Cython.pyx  DOT.dot  GLSL.glsl  Go.go  HTML.html  INI.ini  JSON.json  Java.java  Lua.lua  Properties.properties  Python.py  README.md  Scheme.scm
mixins/: boolean.nanorc  ccomment.nanorc  function.nanorc  hashcomment.nanorc  ini.nanorc  lint.nanorc  longline.nanorc  string.nanorc  todo.nanorc
